--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-	<!DOCTYPE html>
+<!DOCTYPE html>
 	<html lang="zxx" class="no-js">
 	<head>
 		<!-- Mobile Specific Meta -->
@@ -328,8 +328,8 @@
 		            <div class="row d-flex justify-content-center">
 		                <div class="menu-content pb-70 col-lg-9">
 		                    <div class="title text-center">
-		                        <h1 class="mb-10">Other issues we can help you with</h1>
-		                        <p>We all live in an age that belongs to the young at heart. Life that is.</p>
+		                        <h1 class="mb-10">精選營地</h1>
+		                        <p></p>
 		                    </div>
 		                </div>
 		            </div>					
@@ -340,8 +340,10 @@
 									<img class="img-fluid" src="img/o1.jpg" alt="">					
 								</div>
 								<a href="#">
-									<h4>Rent a Car</h4>
+									<h4>格瑪雅農場</h4>
 								</a>
+								<input class="btn btn-primary" style="width:100px;height:40px; background-color:#f2b63e;" type="submit" value="300m以下">
+								
 								<p>
 									The preservation of human life is the ultimate value, a pillar of ethics and the foundation.
 								</p>
