--- a/login.html
+++ b/login.html
@@ -50,52 +50,41 @@
 				<div class="container">
 					<div class="row fullscreen align-items-center justify-content-between">
 						<div class="col-lg-6 col-md-6 banner-left">
-							<h6 class="text-white">Away from monotonous life</h6>
-							<h1 class="text-white">Magical Travel</h1>
+							<h5 class="text-white">Start Camping</h5>
+							<h1 class="text-white">營在起跑點</h1>
 							<p class="text-white">
 								If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see some for as low as $.17 each.
 							</p>
-							<a href="#" class="primary-btn text-uppercase">Get Started</a>
+							
 						</div>
 						<div class="col-lg-5 col-md-10 banner-right">
 							<ul class="nav nav-tabs" id="myTab" role="tablist">
 							  <li class="nav-item">
-							    <a class="nav-link active" id="login-tab" data-toggle="tab" href="login.php" role="tab" aria-controls="login" aria-selected="true">登入</a>
+							    <a class="nav-link active" id="login-tab" data-toggle="tab" href="#login" role="tab" aria-controls="login" aria-selected="true">登入</a>
 							  </li>
 							  <li class="nav-item">
-							    <a class="nav-link" id="register-tab" data-toggle="tab" href="register.php" role="tab" aria-controls="register" aria-selected="false">註冊</a>
+							    <a class="nav-link" id="register-tab" data-toggle="tab" href="#register" role="tab" aria-controls="register" aria-selected="false">註冊</a>
 							  </li>
 							</ul>
 							<div class="tab-content" id="myTabContent">
 							  <div class="tab-pane fade show active" id="login" role="tabpanel" aria-labelledby="login-tab">
 								<form class="form-wrap">
-								    信箱：<input type="text" class="form-control" name="email" placeholder="email " onfocus="this.placeholder = ''" onblur="this.placeholder = 'email '">									
-									密碼：<input type="text" class="form-control" name="password" placeholder="password " onfocus="this.placeholder = ''" onblur="this.placeholder = 'password '">							
+								    <p style ="text-align: left;">信箱：</p><input type="text" class="form-control" name="email" placeholder="email " onfocus="this.placeholder = ''" onblur="this.placeholder = 'email '">									
+									<p style ="text-align: left;">密碼：</p><input type="text" class="form-control" name="password" placeholder="password " onfocus="this.placeholder = ''" onblur="this.placeholder = 'password '">							
 									<a href="#" class="primary-btn text-uppercase">登入</a>									
 								</form>
 							  </div>
-							  <div class="tab-pane fade" id="hotel" role="tabpanel" aria-labelledby="hotel-tab">
+							  <div class="tab-pane fade" id="register" role="tabpanel" aria-labelledby="register-tab">
 								<form class="form-wrap">
-									<input type="text" class="form-control" name="name" placeholder="From " onfocus="this.placeholder = ''" onblur="this.placeholder = 'From '">									
-									<input type="text" class="form-control" name="to" placeholder="To " onfocus="this.placeholder = ''" onblur="this.placeholder = 'To '">
-									<input type="text" class="form-control date-picker" name="start" placeholder="Start " onfocus="this.placeholder = ''" onblur="this.placeholder = 'Start '">
-									<input type="text" class="form-control date-picker" name="return" placeholder="Return " onfocus="this.placeholder = ''" onblur="this.placeholder = 'Return '">
-									<input type="number" min="1" max="20" class="form-control" name="adults" placeholder="Adults " onfocus="this.placeholder = ''" onblur="this.placeholder = 'Adults '">
-									<input type="number" min="1" max="20" class="form-control" name="child" placeholder="Child " onfocus="this.placeholder = ''" onblur="this.placeholder = 'Child '">						
-									<a href="#" class="primary-btn text-uppercase">Search Hotels</a>									
+									<p style ="text-align: left;">使用者名稱：</p><input type="text" class="form-control" name="name" placeholder="name " onfocus="this.placeholder = ''" onblur="this.placeholder = 'name '">									
+									<p style ="text-align: left;">信箱：</p><input type="text" class="form-control" name="email" placeholder="email " onfocus="this.placeholder = ''" onblur="this.placeholder = 'email '">
+									<p style ="text-align: left;">手機號碼：</p><input type="text" class="form-control date-picker" name="phone'" placeholder="phone " onfocus="this.placeholder = ''" onblur="this.placeholder = 'phone '">
+									<p style ="text-align: left;">密碼：</p><input type="text" class="form-control date-picker" name="password" placeholder="password " onfocus="this.placeholder = ''" onblur="this.placeholder = 'password'">
+									<p style ="text-align: left;">再次輸入密碼：</p><input type="text" class="form-control date-picker" name="password" placeholder="password " onfocus="this.placeholder = ''" onblur="this.placeholder = 'password'">						
+									<a href="#" class="primary-btn text-uppercase">註冊</a>									
 								</form>							  	
 							  </div>
-							  <div class="tab-pane fade" id="holiday" role="tabpanel" aria-labelledby="holiday-tab">
-								<form class="form-wrap">
-									<input type="text" class="form-control" name="name" placeholder="From " onfocus="this.placeholder = ''" onblur="this.placeholder = 'From '">									
-									<input type="text" class="form-control" name="to" placeholder="To " onfocus="this.placeholder = ''" onblur="this.placeholder = 'To '">
-									<input type="text" class="form-control date-picker" name="start" placeholder="Start " onfocus="this.placeholder = ''" onblur="this.placeholder = 'Start '">
-									<input type="text" class="form-control date-picker" name="return" placeholder="Return " onfocus="this.placeholder = ''" onblur="this.placeholder = 'Return '">
-									<input type="number" min="1" max="20" class="form-control" name="adults" placeholder="Adults " onfocus="this.placeholder = ''" onblur="this.placeholder = 'Adults '">
-									<input type="number" min="1" max="20" class="form-control" name="child" placeholder="Child " onfocus="this.placeholder = ''" onblur="this.placeholder = 'Child '">							
-									<a href="#" class="primary-btn text-uppercase">Search Holidays</a>									
-								</form>							  	
-							  </div>
+							  
 							</div>
 						</div>
 					</div>
