--- a/index.html
+++ b/index.html
@@ -99,13 +99,13 @@
 					</ol>
 					<div class="carousel-inner">
 					  <div class="carousel-item active">
-						<img class="d-block w-100" src="img/imgage 7.png" alt="First slide">
+						<img class="d-block w-100" src="img/image 7.jpg" alt="First slide">
 					  </div>
 					  <div class="carousel-item">
 						<img class="d-block w-100" src="img/image 8.jpg" alt="Second slide">
 					  </div>
 					  <div class="carousel-item">
-						<img class="d-block w-100" src="img/image .jpg" alt="Third slide">
+						<img class="d-block w-100" src="img/image 3.png" alt="Third slide">
 					  </div>
 					</div>
 					<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
