連結登入到首頁

--- a/login.html
+++ b/login.html
@@ -30,6 +30,7 @@
 	<link rel="stylesheet" href="css/animate.min.css">
 	<link rel="stylesheet" href="css/owl.carousel.css">
 	<link rel="stylesheet" href="css/main.css">
+	
 </head>
 
 <body>
@@ -73,17 +74,17 @@
 								<form class="form-wrap">
 								    <p style ="text-align: left;">信箱：</p><input type="text" class="form-control" name="email" placeholder="email " onfocus="this.placeholder = ''" onblur="this.placeholder = 'email '">									
 									<p style ="text-align: left;">密碼：</p><input type="text" class="form-control" name="password" placeholder="password " onfocus="this.placeholder = ''" onblur="this.placeholder = 'password '">							
-									<a href="#" class="primary-btn text-uppercase">登入</a>									
+									<a href="file:///Applications/XAMPP/xamppfiles/htdocs/CampTopic/property-1.0.0/index.html" class="primary-btn text-uppercase">登入</a>									
 								</form>
 							  </div>
 							  <div class="tab-pane fade" id="register" role="tabpanel" aria-labelledby="register-tab">
 								<form class="form-wrap">
 									<p style ="text-align: left;">使用者名稱：</p><input type="text" class="form-control" name="name" placeholder="name " onfocus="this.placeholder = ''" onblur="this.placeholder = 'name '">									
-									<p style ="text-align: left;">信箱：</p><input type="text" class="form-control" name="email" placeholder="email " onfocus="this.placeholder = ''" onblur="this.placeholder = 'email '">
-									<p style ="text-align: left;">手機號碼：</p><input type="text" class="form-control date-picker" name="phone'" placeholder="phone " onfocus="this.placeholder = ''" onblur="this.placeholder = 'phone '">
-									<p style ="text-align: left;">密碼：</p><input type="text" class="form-control date-picker" name="password" placeholder="password " onfocus="this.placeholder = ''" onblur="this.placeholder = 'password'">
-									<p style ="text-align: left;">再次輸入密碼：</p><input type="text" class="form-control date-picker" name="password" placeholder="password " onfocus="this.placeholder = ''" onblur="this.placeholder = 'password'">						
-									<a href="#" class="primary-btn text-uppercase">註冊</a>									
+									<p style ="text-align: left;">信箱：</p><input type="text" class="form-control Email" name="email" placeholder="email " onfocus="this.placeholder = ''" onblur="this.placeholder = 'email '">
+									<p style ="text-align: left;">手機號碼：</p><input type="text" class="form-control phone" name="phone'" placeholder="phone " onfocus="this.placeholder = ''" onblur="this.placeholder = 'phone '">
+									<p style ="text-align: left;">密碼：</p><input type="text" class="form-control " name="password" placeholder="password " onfocus="this.placeholder = ''" onblur="this.placeholder = 'password'">
+									<p style ="text-align: left;">再次輸入密碼：</p><input type="text" class="form-control " name="password" placeholder="password " onfocus="this.placeholder = ''" onblur="this.placeholder = 'password'">						
+									<a href="file:///Applications/XAMPP/xamppfiles/htdocs/CampTopic/login.html" class="primary-btn text-uppercase">註冊</a>									
 								</form>							  	
 							  </div>
 							  
