--- a/login.html
+++ b/login.html
@@ -74,7 +74,7 @@
 								<form class="form-wrap">
 								    <p style ="text-align: left;">信箱：</p><input type="text" class="form-control" name="email" placeholder="email " onfocus="this.placeholder = ''" onblur="this.placeholder = 'email '">									
 									<p style ="text-align: left;">密碼：</p><input type="text" class="form-control" name="password" placeholder="password " onfocus="this.placeholder = ''" onblur="this.placeholder = 'password '">							
-									<a href="file:///Applications/XAMPP/xamppfiles/htdocs/CampTopic/property-1.0.0/index.html" class="primary-btn text-uppercase">登入</a>									
+  <a href="file:///Applications/XAMPP/xamppfiles/htdocs/CampTopic/property-1.0.0/index.html" class="primary-btn text-uppercase" style="background-color: #005555; border-radius: 30px;">登入</a>									
 								</form>
 							  </div>
 							  <div class="tab-pane fade" id="register" role="tabpanel" aria-labelledby="register-tab">
@@ -84,7 +84,7 @@
 									<p style ="text-align: left;">手機號碼：</p><input type="text" class="form-control phone" name="phone'" placeholder="phone " onfocus="this.placeholder = ''" onblur="this.placeholder = 'phone '">
 									<p style ="text-align: left;">密碼：</p><input type="text" class="form-control " name="password" placeholder="password " onfocus="this.placeholder = ''" onblur="this.placeholder = 'password'">
 									<p style ="text-align: left;">再次輸入密碼：</p><input type="text" class="form-control " name="password" placeholder="password " onfocus="this.placeholder = ''" onblur="this.placeholder = 'password'">						
-									<a href="file:///Applications/XAMPP/xamppfiles/htdocs/CampTopic/login.html" class="primary-btn text-uppercase">註冊</a>									
+									<a href="file:///Applications/XAMPP/xamppfiles/htdocs/CampTopic/login.html" class="primary-btn text-uppercase" style="background-color: #005555; border-radius: 30px;">註冊</a>									
 								</form>							  	
 							  </div>
 							  
