--- a/property-1.0.0/index.html
+++ b/property-1.0.0/index.html
@@ -76,7 +76,7 @@
                 <a class="dropdown-item" href="member.html">會員帳號</a>
                 <a class="dropdown-item" href="member-like.html">我的收藏</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">登出</a>
+                <a class="dropdown-item" href="file:///Applications/XAMPP/xamppfiles/htdocs/CampTopic/login.html">登出</a>
               </div>
             </li>
 	        </ul>
