--- a/property-1.0.0/member.html
+++ b/property-1.0.0/member.html
@@ -145,13 +145,29 @@
               <div class="email mt-4">
                 <i class="icon-envelope"></i>
                 <h4 class="mb-2">Email:</h4>
-                <h6>info@gmail.com</h6>
+                <span style="
+													display: flex;
+													justify-content: left;    
+													align-content: center;      
+													flex-wrap: wrap;
+													font-size: 15px;
+													font-weight: bold;">
+														info@gmail.com<br>
+													</span>
               </div>
 
               <div class="phone mt-4">
                 <i class="icon-phone"></i>
                 <h4 class="mb-2">Call:</h4>
-                <h6>+886 987 654 321</h6>
+                <span style="
+													display: flex;
+													justify-content: left;    
+													align-content: center;      
+													flex-wrap: wrap;
+													font-size: 15px;
+													font-weight: bold;">
+														+886 987 654 321
+													</span>
               </div>
             </div>
           </div>
