--- a/property-1.0.0/member-like.html
+++ b/property-1.0.0/member-like.html
@@ -92,7 +92,7 @@
       <div class="container">
         <div class="row justify-content-center align-items-center">
           <div class="col-lg-9 text-center mt-5">
-            <h1 class="heading" data-aos="fade-up">Properties</h1>
+            <h1 class="heading" data-aos="fade-up">收藏清單</h1>
 
             <nav
               aria-label="breadcrumb"
@@ -118,7 +118,7 @@
       <div class="container">
         <div class="row mb-5 align-items-center">
           <div class="col-lg-6 text-center mx-auto">
-            <ul class="nav nav-tabs" style="position:absolute;width:600px;height: 250px;top:600px; left:120px">
+            <ul class="nav nav-tabs" style="position:absolute;top:600px; left:120px">
               <li class="nav-item">
                 <a class="nav-link land" aria-current="page" href="#">營地</a>
               </li>
@@ -132,9 +132,6 @@
                 <a class="nav-link activity" href="#">活動</a>
               </li>
             </ul>
-            <h2 class="font-weight-bold text-primary heading">
-              收藏清單
-            </h2>
           </div>
         </div>
         
@@ -150,32 +147,30 @@
 
               <div class="property-content">
                 <div class="price mb-2">
-                  <span>$1,291,000</span>
-                  <i class="fa-solid fa-star" style="color: gold;"></i>
-
+                  <span>自然圈農場</span>
+                  <i class="fa-solid fa-star" style="color: gold; position:absolute;top:35px;left: 320px;"></i>
+                  <p style="color: black; position:absolute;top:30px;left: 350px;">4.0</p>
                 </div>
                 <div>
                   <span class="d-block mb-2 text-black-50"
-                    >5232 California Fake, Ave. 21BC</span
+                    >369苗栗縣卓蘭鎮西坪36-20號</span
                   >
-                  <span class="city d-block mb-3">California, USA</span>
-
+                  <span class="city d-block mb-3">苗栗縣 / 卓蘭鎮</span>
                   <div class="specs d-flex mb-4">
                     <span class="d-block d-flex align-items-center me-3">
                       <span class="icon-bed me-2"></span>
-                      <span class="caption">2 beds</span>
+                      <span class="caption"></span>
                     </span>
                     <span class="d-block d-flex align-items-center">
                       <span class="icon-bath me-2"></span>
-                      <span class="caption">2 baths</span>
+                      <span class="caption"></span>
                     </span>
                   </div>
-
                   <a
                     href="property-single.html"
                     class="btn btn-primary py-2 px-3"
-                    >See details</a
-                  >
+                    >See details</a>
+                    <i class="fa-solid fa-heart" style="color: red; position:absolute;top:210px;left: 370px;"></i>
                 </div>
               </div>
             </div>
