--- a/Register.html
+++ b/Register.html
@@ -12,8 +12,11 @@
     <form action="php/Register.php" method="post">
         accountName: <input type="text" name="accountName">
         accountPassword: <input type="password" name="accountPassword">
+        性別： 男<input type="radio" name="accountGender" value="Male"> 女<input type="radio" name="accountGender"
+            value="Female">
+        生日：<input type="date" name="accountBirthday">
         accountEmail: <input type="email" name="accountEmail">
-        accountPhoneNumber: <input type="number" name="accountPhoneNumber">
+        accountPhoneNumber: <input type="tel" name="accountPhoneNumber">
         <button>submit</button>
 
     </form>
