--- a/property-1.0.0/member.html
+++ b/property-1.0.0/member.html
@@ -92,7 +92,7 @@
       <div class="container">
         <div class="row justify-content-center align-items-center">
           <div class="col-lg-9 text-center mt-5">
-            <h1 class="heading" data-aos="fade-up">Account</h1>
+            <h1 class="heading" data-aos="fade-up">會員資料</h1>
 
             <nav
               aria-label="breadcrumb"
@@ -105,7 +105,7 @@
                   class="breadcrumb-item active text-white-50"
                   aria-current="page"
                 >
-                  Account
+                  會員資料
                 </li>
               </ol>
             </nav>
