--- a/deluxe-master/test.html
+++ b/deluxe-master/test.html
@@ -65,7 +65,7 @@
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
-	          <li class="nav-item "><a href="index.html" class="nav-link">Home</a></li>
+	          <li class="nav-item "><a href="property-1.0.0/index.html" class="nav-link">Home</a></li>
 	          <li class="nav-item"><a href="rooms.html" class="nav-link">Rooms</a></li>
 	          <li class="nav-item"><a href="restaurant.html" class="nav-link">Restaurant</a></li>
 	          <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
@@ -91,24 +91,22 @@
 
     <div
       class="hero page-inner overlay"
-      style="background-image: url('images/hero_bg_1.jpg')"
-    >
+      style="background-image: url('images/hero_bg_1.jpg'); 
+      height:70vh;
+      min-height: 300px;"  >
       <div class="container">
         <div class="row justify-content-center align-items-center">
-          <div class="col-lg-9 text-center mt-5">
+          <div class="col-lg-12 text-center mt-5">
             <h1 class="heading" data-aos="fade-up">Properties</h1>
 
             <nav
               aria-label="breadcrumb"
               data-aos="fade-up"
-              data-aos-delay="200"
-            >
+              data-aos-delay="200">
               <ol class="breadcrumb text-center justify-content-center">
                 <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                <li
-                  class="breadcrumb-item active text-white-50"
-                  aria-current="page"
-                >
+                <li  class="breadcrumb-item active text-white-50"
+                  aria-current="page" >
                   Properties
                 </li>
               </ol>
