--- a/deluxe-master/test.html
+++ b/deluxe-master/test.html
@@ -348,6 +348,7 @@
                 <li><a href="#">Terms</a></li>
                 <li><a href="#">Privacy</a></li>
               </ul>
+              <div class="widget">
               <ul class="list-unstyled float-start links">
                 <li><a href="#">Partners</a></li>
                 <li><a href="#">Business</a></li>
@@ -355,8 +356,8 @@
                 <li><a href="#">Blog</a></li>
                 <li><a href="#">FAQ</a></li>
                 <li><a href="#">Creative</a></li>
-              </ul>
-            </div>
+              </ul></div></div>
+            
             <!-- /.widget -->
           </div>
           <!-- /.col-lg-4 -->
@@ -394,6 +395,8 @@
           </div>
           <!-- /.col-lg-4 -->
         </div>
+        </div>
+        
         <!-- /.row -->
 
         <div class="row mt-5">
@@ -420,10 +423,7 @@
             </div>
           </div>
         </div>
-      </div>
-      <!-- /.container -->
-    </div>
-    <!-- /.site-footer -->
+   
 
    
 
