--- a/property-1.0.0/member-like.html
+++ b/property-1.0.0/member-like.html
@@ -117,7 +117,7 @@
 
     <div class="section">
       <div class="container">
-        <div class="row mb-6 align-items-center">
+        <div class="row mb-6 align-items-center" style="margin-top: 20px; margin-bottom: 20px;">
             
           <ul class="nav nav-tabs" style="margin-left: 16px; width: 55%; " id="myTab" role="tablist">
               <li class="nav-item" style="margin-right:20px">
