--- a/deluxe-master/test.html
+++ b/deluxe-master/test.html
@@ -278,6 +278,8 @@
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus itaque, autem necessitatibus voluptate quod mollitia delectus aut, sunt placeat nam vero culpa sapiente consectetur similique, inventore eos fugit cupiditate numquam!</p>
             </div>
           </div>
+        </div>
+     
           <div class="col-md-12 room-single ftco-animate mb-5 mt-5">
             <h4 class="mb-4">Available Room</h4>
             <div class="row">
@@ -327,10 +329,8 @@
                 </div>
               </div>
             </div>
-          </div>
-        </div>
-      </div>
-    </section> <!-- .section -->
+          </div></div>
+         <!-- .section -->
 
 
     
@@ -438,7 +438,7 @@
             </div>
           </div>
         </div>
-   
+   </div>
 
    
 
