版面整理、圖片、文字

--- a/deluxe-master/test copy.html
+++ b/deluxe-master/test copy.html
@@ -150,13 +150,8 @@
                   <div class="modal-body" style="margin-top: -50px">
                     <h5>設備與服務</h5>
 
-                    <span style="
-                    display: flex;
-                    flex-wrap: wrap;
-                    letter-spacing: 1px;
-                    line-height: 40px;
-                    font-size: 15px;
-                    ;"><i class="icon-beach_access" style="margin-top: 10px; margin-right: 5px;"></i>海灘(緊鄰海灘)</span>
+                    <span>
+                    <i class="icon-beach_access" style="margin-top: 10px; margin-right: 5px;"></i>海灘(緊鄰海灘)</span>
 
                     
                     <span style="
