--- a/deluxe-master/camp-single.html
+++ b/deluxe-master/camp-single.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Deluxe - Free Bootstrap 4 Template by Colorlib</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <link rel="shortcut icon" href="property-1.0.0/images/Group 75.png" />
     
     <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700,700i" rel="stylesheet">
@@ -97,7 +98,7 @@
       <div class="container">
         <div class="row justify-content-center align-items-center">
           <div class="col-lg-12 text-center mt-5">
-            <h1 class="heading" data-aos="fade-up">Properties</h1>
+            <h1 class="heading" data-aos="fade-up">營地資訊</h1>
 
             <nav
               aria-label="breadcrumb"
@@ -191,14 +192,13 @@
           	</div>
           </div> <!-- .col-md-8 -->
           <div class="col-lg-4 sidebar ftco-animate">
-            <div class="sidebar-box">
-              <form action="#" class="search-form">
-                <div class="form-group">
-                  <span class="icon fa fa-search"></span>
-                  <input type="text" class="form-control" placeholder="Type a keyword and hit enter">
-                </div>
-              </form>
+            <div class="input-group mb-3">
+              <input type="text" class="form-control" placeholder="search" aria-label="search" aria-describedby="basic-addon2">
+              <div class="input-group-append">
+                <button class="btn btn-outline-secondary" type="button">Button</button>
+              </div>
             </div>
+           
             <div class="sidebar-box ftco-animate">
               <div class="categories">
                 <h4 style="margin-bottom: 16px">類別</h4>
