--- a/deluxe-master/camp-single.html
+++ b/deluxe-master/camp-single.html
@@ -73,7 +73,7 @@
 	          <li class="nav-item"><a href="about.html" class="nav-link">鹿的設備</a></li>
 	          <li class="nav-item"><a href="blog.html" class="nav-link">加入起跑點</a></li>
 	           
-            <li class="nav-item dropdown active">
+            <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="member.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 帳號
               </a>
