--- a/deluxe-master/camper.html
+++ b/deluxe-master/camper.html
@@ -230,6 +230,7 @@
                   <p>南庄老街位於台灣苗栗縣南庄鄉鄉治所在地南庄聚落，當地居民以客家族群為主。具有濃濃的客家懷舊風味，每到假日，總是吸引眾多遊客造訪。主要的景點有永昌宮、老郵局、乃木崎、桂花巷及洗衫坑等。 傳統的老街範圍以中正路為主，兩旁商家林立。</p>
                  </div>
                </div>
+               
              </div>
  
              
@@ -253,15 +254,14 @@
             </div>
               </div>
              </div>
-             <div style="clear: both;">
-              <h4 style="font-weight:bold;">攜帶物品</h4>
-              <i class="fa-solid fa-circle fa-2xs" style="color: black;"></i>&nbsp;&nbsp;<span>睡袋</span>
+              <h4>攜帶物品</h4>
               <br>
-              <i class="fa-solid fa-circle fa-2xs" style="color: black;"></i>&nbsp;&nbsp;<span>洗漱用品</span>
-              <br>
-              <i class="fa-solid fa-circle fa-2xs" style="color: black;"></i>&nbsp;&nbsp;<span>保暖衣物</span>
-              <br>
-              <i class="fa-solid fa-circle fa-2xs" style="color: black;"></i>&nbsp;&nbsp;<span>點心</span>
+              <div class="list">
+              <li>睡袋</li>
+              <li>洗漱用品</li>
+              <li>保暖衣物</li>
+              <li>點心</li>
+            </div>
              </div>
             </div>
            </div> <!-- .col-md-8 -->
