--- a/deluxe-master/camper.html
+++ b/deluxe-master/camper.html
@@ -389,7 +389,7 @@
                  <i class="fa-solid fa-circle-user fa-xl"></i>&nbsp;&nbsp;<label>yizz</label>
                  <br>
                  <i class="fa-solid fa-circle-user fa-xl"></i>&nbsp;&nbsp;<label>yizz</label>
-                 <li><a href="#" style="margin-left: 270px;">查看更多</a></li>
+                 <li><a href="#" style="margin-left: 300px;">查看更多</a></li>
                  <h6 style="font-weight:bold;">目前所需用品</h6>
                  <br>
                  <i class="fa-solid fa-circle fa-2xs" style="color: black;"></i>&nbsp;&nbsp;<span>睡袋</span>
@@ -399,9 +399,14 @@
                  <i class="fa-solid fa-circle fa-2xs" style="color: black;"></i>&nbsp;&nbsp;<span>保暖衣物</span>
                  <br>
                  <i class="fa-solid fa-circle fa-2xs" style="color: black;"></i>&nbsp;&nbsp;<span>點心</span>
-                 <li><a href="#" style="margin-left: 270px;">查看更多</a></li>
-                 <li><input type="submit" value="我要參加！" style="width: 300px; height: 36px; background-color: #4c6358;color: white; margin-left: 20px; border:none; border-radius: 5px;"></li>
-                 
+                 <li><a href="#" style="margin-left: 300px;">查看更多</a></li>
+                 <button id="join" style="width: 300px; height: 36px; background-color: #4c6358;color: white; margin-left: 28px; border:none; border-radius: 5px;">我要參加！</button>
+                 <dialog id="infoModel">
+                  <div style="padding: 10px;">
+                    <h4 style="font-weight:bold;">參加</h4>
+                    <p style="color: 	#E0E0E0;">參加活動蒐集勳章！</p>
+                  </div>
+                 </dialog>
                </div>
                </div>
 
