--- a/property-1.0.0/member-like.html
+++ b/property-1.0.0/member-like.html
@@ -672,7 +672,7 @@
                   <div class="col-lg-6 text-center">
                     <div class="custom-pagination">
                       <a href="#">1</a>
-                      <a href="#" class="active"">2</a>
+                      <a href="#" class="active">2</a>
                       <a href="#">3</a>
                       <a href="#">4</a>
                       <a href="#">5</a>
