--- a/property-1.0.0/camp-information.html
+++ b/property-1.0.0/camp-information.html
@@ -450,6 +450,19 @@
             </div>
             <!-- .item -->
           </div>
+          <div class="row align-items-center py-5">
+            <div class="col-lg-3"></div>
+            <div class="col-lg-6 text-center">
+              <div class="custom-pagination">
+                <a href="#">1</a>
+                <a href="#" class="active">2</a>
+                <a href="#">3</a>
+                <a href="#">4</a>
+                <a href="#">5</a>
+              </div>
+            </div>
+          </div>
+      </div>
           
       </div>
       </div>
