--- a/property-1.0.0/camp-information.html
+++ b/property-1.0.0/camp-information.html
@@ -124,7 +124,7 @@
         <div class="row mb-6 align-items-center" style="margin-top: 20px; margin-bottom: 40px;">
           <div class="input-group " style="width: 30%; margin-left:75%; justify-content: flex-end">
 
-            <button type="button" class="btn btn-primary" style="margin-right:1200px;width:150px;height:40px;border: 2px solid #d9d9d9;border-radius:20px;font-size: 13px;margin-top: 10px;padding-right:22px;padding-top: 1px;padding-bottom: 10px;background: transparent;">
+            <button type="button" class="btn1">
               <i class="icon-filter_list" style="margin-right: 30px;padding: 10px;padding-top: 20px;"></i>
               <span style="margin-left: 30px;padding-bottom: 15px;">篩選</span>
             </button>
