--- a/deluxe-master/check.html
+++ b/deluxe-master/check.html
@@ -207,7 +207,7 @@
               </div>
              </div>
              <div class="col-md-12 room-single ftco-animate mb-5 mt-4" style="margin-left: -15px ;">
-              
+              <i class="fa-regular fa-pen-to-square fa-lg" style="margin-left: 800px;"></i>
               <div class="block-16">
                 <div style="background-color: 	#408080; width: 110px; height: 35px; border-radius: 3px; float: left;">
                   <p style="color: white; text-align: center; line-height: 35px; font-weight:bold;">Day 2</p>
@@ -255,6 +255,7 @@
             </div>
               </div>
              </div>
+             <i class="fa-regular fa-pen-to-square fa-lg" style="margin-left: 800px;"></i>
               <h4>攜帶物品</h4>
               <br>
               <div class="list">
@@ -431,16 +432,21 @@
           <h4 style="font-weight:bold;">審核參加人員</h4>
           <div class="name">
           <i class="fa-solid fa-circle-user fa-2xl"></i>&nbsp;&nbsp;<label style=" box-sizing: border-box;width: 120px;">yizz</label><i class="fa-solid fa-child-dress fa-lg" style="color: #FFB5B5; "></i>
-          </div>
+          <i class="fa-solid fa-circle-check fa-lg" style=" margin-left: 50px; color: #005757;"></i><i class="fa-solid fa-circle-xmark fa-lg" style="color: 	#CE0000;margin-left: 10px;"></i>
+        </div>
           <div class="name">
             <i class="fa-solid fa-circle-user fa-2xl"></i>&nbsp;&nbsp;<label style=" box-sizing: border-box;width: 120px;">yizz</label><i class="fa-solid fa-child-dress fa-lg" style="color: #FFB5B5; "></i>
-            </div>
+            <i class="fa-solid fa-circle-check fa-lg" style=" margin-left: 50px; color: #005757;"></i><i class="fa-solid fa-circle-xmark fa-lg" style="color: 	#CE0000;margin-left: 10px;"></i>
+          </div>
           <div class="name">
                 <i class="fa-solid fa-circle-user fa-2xl"></i>&nbsp;&nbsp;<label style=" box-sizing: border-box;width: 120px;">yizz</label><i class="fa-solid fa-child-dress fa-lg" style="color: #FFB5B5; "></i>
-                </div>
+                <i class="fa-solid fa-circle-check fa-lg" style=" margin-left: 50px; color: #005757;"></i><i class="fa-solid fa-circle-xmark fa-lg" style="color: 	#CE0000;margin-left: 10px;"></i>
+              </div>
           <div class="name">
                     <i class="fa-solid fa-circle-user fa-2xl"></i>&nbsp;&nbsp;<label style=" box-sizing: border-box;width: 120px;">yizz</label><i class="fa-solid fa-child-dress fa-lg" style="color: #FFB5B5; "></i>
-                    </div>
+                    <i class="fa-solid fa-circle-check fa-lg" style=" margin-left: 50px; color: #005757;"></i><i class="fa-solid fa-circle-xmark fa-lg" style="color: 	#CE0000;margin-left: 10px;"></i>
+                  </div>
+                  <br>
           <button style="width: 100px; height: 30px; background-color: 	#005757;color: white; margin-left: 200px; border:none; border-radius: 30px;">確認</button>
         
         </div>
