--- a/property-1.0.0/camp-information.html
+++ b/property-1.0.0/camp-information.html
@@ -167,8 +167,9 @@
               </div>
               <dialog id="infoModal" class="info-modal">
                 <div class="box">
+                  <span style="display:flex;margin-bottom: 12px;flex-wrap: wrap;">
                   <h4 style="font-weight:bold;">創建露營活動</h4>
-                  <i id="close" class="fa-solid fa-circle-xmark fa-xl" style="color:#D0D0D0;margin-left: 420px;margin-top: -20px;"></i>
+                  <i id="close" class="fa-solid fa-circle-xmark fa-xl" style="color:#D0D0D0;margin-left: 420px;margin-top: -20px;"></i></span>
                 </div>
                 <h6 style="color: #9D9D9D ">尋找其他小鹿一起冒險！<h6>
                     <br>
