--- a/deluxe-master/camper.html
+++ b/deluxe-master/camper.html
@@ -197,6 +197,8 @@
                   </div>
                   <div class="spot">
                     <p> 飛牛牧場 - 勝興車站 - 林泉休閒露營區</p>
+                    <button type="button" class="btn-icon" data-toggle="modal" data-target=".bd-example-modal-lg">
+                      <i class="fa-regular fa-pen-to-square"></i></button>
                   </div>
               </span>
                   <div style="clear: both;">
@@ -436,8 +438,9 @@
             </div>
           </div>
         </div> <!-- .col-md-8 -->
-        <div class="col-lg-4 ftco-animate" style=" width:400px; margin-left: 40px;">
 
+
+        <div class="col-lg-4 ftco-animate" style=" width:400px; margin-left: 40px;">
           <div class="sidebar-box ftco-animate" style="border-style: solid; border-color: #F0F0F0;">
             <div class="categories">
               <div class="box-side">
@@ -743,9 +746,28 @@
       </div>
   </div>
     </div>
-
+</div>
     <!-- .section -->
-
+    <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              ...
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+          </div>
+        </div>
+      </div>
+  
 
 
 
