--- a/deluxe-master/camper.html
+++ b/deluxe-master/camper.html
@@ -134,13 +134,13 @@
               <h6 class="mb-4" style="font-weight:bold;">基本資訊</h6>
               <div class="single-slider owl-carousel">
                 <div class="item">
-                  <div class="room-img" style="background-image: url(images/camper.jpeg);"></div>
+                  <div class="room-img" style="background-image: url(images/Rectangle\ 322.png);"></div>
                 </div>
                 <div class="item">
-                  <div class="room-img" style="background-image: url(images/camper-2.jpg);"></div>
+                  <div class="room-img" style="background-image: url(images/Rectangle\ 321.png);"></div>
                 </div>
                 <div class="item">
-                  <div class="room-img" style="background-image: url(images/camper-3.jpg);"></div>
+                  <div class="room-img" style="background-image: url(images/Rectangle\ 320.png);"></div>
                 </div>
               </div>
             </div>
