--- a/deluxe-master/check.html
+++ b/deluxe-master/check.html
@@ -95,7 +95,7 @@
   </nav>
   <!-- END nav -->
 
-  <div class="hero page-inner overlay" style="background-image: url('images/Wireshark.png'); 
+  <div class="hero page-inner overlay" style="background-image: url('images/Rectangle\ 151.png'); 
       height:70vh;
       min-height: 300px;">
     <div class="container">
@@ -134,13 +134,13 @@
               <h6 class="mb-4" style="font-weight:bold;">基本資訊</h6>
               <div class="single-slider owl-carousel">
                 <div class="item">
-                  <div class="room-img" style="background-image: url(images/camper.jpeg);"></div>
+                  <div class="room-img" style="background-image: url(images/Rectangle\ 322.png);"></div>
                 </div>
                 <div class="item">
-                  <div class="room-img" style="background-image: url(images/camper-2.jpg);"></div>
+                  <div class="room-img" style="background-image: url(images/Rectangle\ 321.png);"></div>
                 </div>
                 <div class="item">
-                  <div class="room-img" style="background-image: url(images/camper-3.jpg);"></div>
+                  <div class="room-img" style="background-image: url(images/Rectangle\ 320.png);"></div>
                 </div>
               </div>
             </div>
@@ -483,7 +483,7 @@
              </div>
              <span class="more"><a href="#">查看更多</a></span>
              <div class="box-side">
-              <button type="button" class="btn-side" id="show" data-toggle="modal" data-target="#exampleModal">我要參加！</button>
+              <button type="button" class="btn-side" id="show" data-toggle="modal" data-target="#exampleModal" data-whatever="@mdo">審核人員</button>
              </div>
             </div>
           </div>
@@ -621,9 +621,9 @@
       <p style="color: #a0a0a0 ">參加活動蒐集勳章！<p>
      
       <div class="modal-list">
-          <input type="text" value="聯絡電話">
-          <input type="email" value="email">
-          <textarea rows="4">備註 / 建議</textarea>
+          <input type="text" placeholder="電話">
+          <input type="email" placeholder="信箱">
+          <textarea rows="4" type="text" value="suggest" placeholder="備註 / 建議"></textarea>
           
           <h6 style="font-weight:bold;">可提供裝備</h6>
           <div class="supply">
@@ -739,7 +739,7 @@
               </div>
             </div>
         </div>
-        <textarea rows="2">其他</textarea></div>
+        <textarea rows="2" placeholder="其他" type="text"></textarea></div>
         <div style=" display: flex;
         justify-content: flex-end;">
         <button class="btn-secondary">提交</button>
