--- a/property-1.0.0/member-like.html
+++ b/property-1.0.0/member-like.html
@@ -573,7 +573,8 @@
                        <p>30 分享</p>
                       <i class="fa-regular fa-eye"></i><p>1,098</p></div>
                        </span>
-                      </footer></div>
+                      </footer>
+                    </div>
                 </div>
                 <div class="card">
                   <img src="images/M85318677_big.jpeg" class="card-img-top" alt="...">
