--- a/property-1.0.0/article-manage.html
+++ b/property-1.0.0/article-manage.html
@@ -267,6 +267,29 @@
                 </article>
                 
             </div></div></div>
+
+            <dialog id="infoModal">
+              <div class="box">
+              <h4 style="font-weight:bold;">發送警告</h4>
+              <i id="close" class="fa-solid fa-circle-xmark fa-xl" style="color:#D0D0D0;"></i>
+            </div>
+            <div class="box">
+              <h6>作者<h6>
+                <i class="fa-solid fa-circle-user fa-2xl"></i><span>yizz
+                </span>
+              </div>
+              <br>
+              <select style="border-radius: 30px; color: #D0D0D0;">
+                <option>原因</option>
+                <option>內容不當或濫用(例如：裸露、仇恨言語、威脅)</option>
+                <option>不實資訊</option>
+                <option>搜擾</option>
+                <option>其他</option>
+                </select>
+              <br><br>
+            <button style="width: 100px; height: 30px; background-color: 	#005757;color: white; margin-left: 320px; border:none; border-radius: 30px;">確認
+            </button>
+          </dialog>
           
 
             <div class="tab-pane fade show" id="check" role="tabpanel" aria-labelledby="check-tab">
