--- a/property-1.0.0/camp-information.html
+++ b/property-1.0.0/camp-information.html
@@ -67,42 +67,44 @@
 
       <div class="collapse navbar-collapse" id="ftco-nav">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item "><a href="index.html" class="nav-link">首頁</a></li>
-          <li class="nav-item"><a href="rooms.html" class="nav-link">Rooms</a></li>
-          <li class="nav-item"><a href="restaurant.html" class="nav-link">Restaurant</a></li>
-          <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
+          <li class="nav-item active"><a href="index.html" class="nav-link">首頁</a></li>
+          <li class="nav-item"><a href="rooms.html" class="nav-link">找小鹿</a></li>
+          <li class="nav-item"><a href="restaurant.html" class="nav-link">鹿的分享</a></li>
+          <li class="nav-item"><a href="about.html" class="nav-link">鹿的裝備</a></li>
           <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
 
-          <li class="nav-item dropdown active">
+          <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="member.html" id="navbarDropdown" role="button"
               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              帳號
+            帳號
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="member.html">會員帳號</a>
               <a class="dropdown-item" href="member-like.html">我的收藏</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">登出</a>
+              <a class="dropdown-item" href="file:///Applications/XAMPP/xamppfiles/htdocs/CampTopic/login.html">登出</a>
             </div>
           </li>
-
         </ul>
       </div>
     </div>
   </nav>
+  <!-- END nav -->
 
-  <div class="hero page-inner overlay" style="background-image: url('images/Rectangle\ 134.png')">
+  <div class="hero page-inner overlay" style="background-image: url('images/Rectangle\ 151.png'); 
+      height:70vh;
+      min-height: 300px;">
     <div class="container">
       <div class="row justify-content-center align-items-center">
-        <div class="col-lg-9 text-center mt-5">
-          <h1 class="heading" data-aos="fade-up">收藏清單</h1>
+        <div class="col-lg-12 text-center mt-5">
+          <h1 class="heading" data-aos="fade-up">找小鹿
+          </h1>
 
           <nav aria-label="breadcrumb" data-aos="fade-up" data-aos-delay="200">
             <ol class="breadcrumb text-center justify-content-center">
               <li class="breadcrumb-item"><a href="index.html">首頁</a></li>
-              <li class="breadcrumb-item"><a href="member.html">會員帳號</a></li>
               <li class="breadcrumb-item active text-white-50" aria-current="page">
-                我的收藏
+                找小鹿
               </li>
             </ol>
           </nav>
