--- a/property-1.0.0/manage-equip.html
+++ b/property-1.0.0/manage-equip.html
@@ -662,6 +662,7 @@
               </div>
           </div>
       </div>  
+
       <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
           <div class="modal-content">
@@ -678,18 +679,12 @@
                   width: 8%;
                   margin-right: 16px;">
                 <label style="font-size: 16px; margin-bottom: 0px; ">yizzzzz</label></span>
-                <div class="dropdown" style="display: flex; align-items: center;justify-content: center;">
-                  <button class="form-c-dropdown" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
-                  原因
-                  <i class="fa-solid fa-caret-down"></i>
-                  </button>
-                  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton2" >
-                  <li><a class="dropdown-item " >內容不當或濫用(例如:裸露、仇恨言語、威脅)</a></li>
-                  <li><a class="dropdown-item" >不實資訊</a></li>
-                  <li><a class="dropdown-item" >騷擾</a></li>
-                  <li><a class="dropdown-item" >其他</a></li>
-                  </ul>
-              </div>
+                <select class="warning">
+              <option>內容不當或濫用(例如：裸露、仇恨言語、威脅)</option>
+              <option>不實資訊</option>
+              <option>搜擾</option>
+              <option>其他</option>
+            </select>
             </div>
             <div class="modal-footer">
               <div style=" display: flex; justify-content: flex-end;">
