--- a/deluxe-master/equipment.html
+++ b/deluxe-master/equipment.html
@@ -94,7 +94,7 @@
           <div class="col-lg-8 ftco-animate order-md-last">
             <article class="col-md-10 article-list" style="display: flex;flex-wrap: wrap;justify-content: space-between;">
               <div class="inner" style="display: flex; margin-left: 20px; justify-content: center">
-             <div class="card">
+             <div class="card" style="margin-right: 20px;">
           <img src="images/M85318677_big.jpeg" class="card-img-top" alt="...">
           
           <div class="card-body">
