--- a/deluxe-master/property-1.0.0/index.html
+++ b/deluxe-master/property-1.0.0/index.html
@@ -77,7 +77,7 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="member.php">會員帳號</a>
-              <a class="dropdown-item" href="member-like.html">我的收藏</a>
+              <a class="dropdown-item" href="member-like.php">我的收藏</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="../login.php">登出</a>
             </div>
