--- a/deluxe-master/equipment.html
+++ b/deluxe-master/equipment.html
@@ -211,6 +211,13 @@
               
             
           </div>
+          <button type="button" class="gray-lg" data-toggle="modal" data-target="#create">
+            <h6>發起露營活動！</h6>
+            <div class="verticle-line"></div>
+            <span style="display: flex; align-items: center; justify-content: flex-start" >
+              <i class="fa-solid fa-hand-fist" style="font-size: 18px;margin-right: 8px;"></i>
+               <h6>創建</h6></span>
+          </button>
             <div class="sidebar-box ftco-animate">
               <div class="categories">
                 <h3>Categories</h3>
